--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 body {
   margin: 0;
   color: #333333;
-  font-family: "微软雅黑", "Microsoft YaHei", "PingFang SC", "Hiragino Sans GB",
+  font-family: '微软雅黑', 'Microsoft YaHei', 'PingFang SC', 'Hiragino Sans GB',
     PingHei, STHeiti;
 }
 
@@ -1366,7 +1366,7 @@ display: block; */
   flex-shrink: 0;
   padding: 8px 5px;
   margin: 0 32px;
-  transition: transform .3s ease-out;
+  transition: transform 0.3s ease-out;
 }
 
 .entries .icon:hover {
@@ -1451,7 +1451,7 @@ display: block; */
   .entries .icons:hover {
     margin-bottom: 20px;
   }
-  
+
   .entries > img {
     display: none;
   }
